# symphony

./: .gitattributes  AGENTS.md  ARCHITECTURE.md  README.md  SPEC.md  handoff-phase-1.md  prd.md  pyproject.toml  test-plan-epic-2.md
.github/: pull_request_template.md
.github/workflows/: sync-review-to-linear.yml
daily/: dev-log-2026-05-09-084452.md  dev-log-2026-05-09-085949.md
deploy/: symphony.service
elixir/lib/mix/tasks/: pr_body.check.ex
elixir/test/symphony_elixir/: core_test.exs
symphony/: __init__.py  auth.py  cli.py  config.py  http_server.py  onboarding.py  onboarding_tutorial.py  orchestrator.py  runtime.py  workflow.py  workspace.py
symphony/agents/: __init__.py  base.py  claude_code.py  codex.py
symphony/tools/: __init__.py  linear_graphql.py
symphony/tracker/: __init__.py  linear.py  models.py
tests/: test_agent_runners.py  test_claude_code_runner.py  test_cli.py  test_codex_runner.py  test_http_server.py  test_linear_tracker.py  test_onboarding.py  test_onboarding_tutorial.py  test_orchestrator.py  test_runtime.py  test_workflow_config.py  test_workspace.py
