[project]
name = "symphony"
version = "0.1.0"
description = "Python implementation of the Symphony agent orchestration service"
requires-python = ">=3.12"
dependencies = [
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "watchfiles>=0.21",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["symphony*"]
exclude = ["elixir*"]

[tool.unittest]
start-dir = "tests"
pattern = "test_*.py"
